# NowCart

./: .dockerignore  .gitignore  APK_BUILD_GUIDE.md  ARCHITECTURE_DIAGRAM.md  DEPLOYMENT.md  NowCart_9534.csv  NowCart_Presentation.pptx  NowCart_Presentation_Script.md  PPT_CONTENT.md  PRESENTATION_SCRIPT.md  README.md  SYSTEM_ARCHITECTURE.md  archi.md  deploy.bat  docker-compose.yml  generate_ppt.py  migrate.md  presentation_preview.html  presentation_strategy.md
server/: .env.example  Dockerfile  pyproject.toml
server/app/: main.py
server/app/agents/: __init__.py  graph.py  nodes.py  state.py
server/app/async_jobs/: __init__.py  lambda_handlers.py  sqs_publisher.py
server/app/controllers/: __init__.py  admin.py  auth.py  cart.py  catalog.py  constraint.py  health.py  meta.py  orders.py  outcome.py  predict.py  share.py  sos.py  subscribe.py  vision.py  voice.py
server/app/core/: config.py  logging.py
server/app/llm/: __init__.py  base.py  bedrock_provider.py  factory.py  gemini_provider.py  groq_provider.py  mock_provider.py  schemas.py
server/app/middleware/: __init__.py  feature_timing.py  pii_redaction.py  rate_limit.py  request_id.py  telemetry.py
server/app/models/: __init__.py
server/app/repositories/: __init__.py  base.py  cache.py  dynamodb.py  memory.py
server/app/seed/: __init__.py  __main__.py  catalog.py  mock_data.py  seed_dynamodb.py  stock_overrides.py
server/app/services/: __init__.py  badge_service.py  budget_service.py  cart_ops_service.py  catalog_service.py  confidence_service.py  counterfactual_service.py  outcome_service.py  (+9 more)
(+177 files in other folders)
