[project]
name = "nowcart-server"
version = "0.1.0"
description = "NowCart — intent-capture layer for quick-commerce (FastAPI + LangGraph)"
readme = "../README.md"
requires-python = ">=3.11"

dependencies = [
    # --- Web framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    # --- Agents / LangGraph ---
    "langgraph>=0.2.28",
    "langchain-core>=0.3.6",
    # --- LLM providers (free tier) ---
    "groq>=0.11.0",
    "google-generativeai>=0.8.2",
    # --- Data / AWS ---
    "boto3>=1.35.0",
    "aioboto3>=13.2.0",
    # --- Cache / state ---
    "redis>=5.0.8",
    # --- Semantic search (bi-encoder + cross-encoder via sentence-transformers) ---
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
    # --- Utilities ---
    "rapidfuzz>=3.9.7",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "orjson>=3.10.12",
    "tenacity>=8.5.0",
    "openpyxl>=3.1.5",
    "youtube-transcript-api>=1.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
